gccida/c0/split_1
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_1/src/insn-recog.c:48412:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = x1; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_1/src/insn-recog.c:48413:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x1o = ( rtx)x0[1]; 
            ^~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_1/src/insn-recog.c:48421:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x2k; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_1/src/insn-recog.c:48427:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x3g = ( rtx)x2k[1]; 
            ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_1/src/insn-recog.c:48432:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x2m = ( rtx)x1o[1]; 
            ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_1/src/insn-recog.c:48435:24: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
return gen_split_1133( recog_data_0.operand); 
                       ^~~~~~~~~~~~
                       recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_1/src/insn-recog.c:48444:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x2l; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_1/src/insn-recog.c:48450:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x3i = ( rtx)x2l[1]; 
            ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_1/src/insn-recog.c:48455:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x2n = ( rtx)x1o[1]; 
            ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_1/src/insn-recog.c:48458:24: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
return gen_split_1135( recog_data_0.operand); 
                       ^~~~~~~~~~~~
                       recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_1/src/insn-recog.c:48463:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = x1; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_1/src/insn-recog.c:48464:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x1n = ( rtx)x0[1]; 
            ^~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_1/src/insn-recog.c:48472:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x2j; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_1/src/insn-recog.c:48473:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
return gen_split_943( recog_data_0.operand); 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_1/src/insn-recog.c:48477:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = x1; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_1/src/insn-recog.c:48478:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x1m = ( rtx)x0[1]; 
            ^~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_1/src/insn-recog.c:48486:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x2i; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_1/src/insn-recog.c:48488:54: error: use of undeclared identifier 'recog_data_0'
|| mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)recog_data_0.operand[1])] != MODE_FLOAT 
                                                     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_1/src/insn-recog.c:48488:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)recog_data_0.operand[1])] != MODE_FLOAT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_1/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_1/src/obj/insn-recog.o] Error 1
